crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__call_trailing_comma.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: "f(a, b,)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 9,
        },
    },
    value: Call {
        function: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 2,
                },
            },
            value: Var(
                "f",
            ),
        },
        arguments: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 3,
                    },
                    end: Position {
                        line: 1,
                        column: 4,
                    },
                },
                value: Var(
                    "a",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 7,
                    },
                },
                value: Var(
                    "b",
                ),
            },
        ],
    },
}
