crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__error_access_no_name.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: x.
---
Access(
    1,
    3,
)
