crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__error_call_unclosed.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: "f(a, b"
---
Call(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 2,
            },
            boundary: Position {
                line: 1,
                column: 7,
            },
            unexpected: Position {
                line: 1,
                column: 7,
            },
        },
    ),
    1,
    2,
)
