crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__error_index_unclosed.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: "xs[0"
---
Index(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 3,
            },
            boundary: Position {
                line: 1,
                column: 5,
            },
            unexpected: Position {
                line: 1,
                column: 5,
            },
        },
    ),
    1,
    3,
)
