crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__error_macro_unbalanced.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: "f!(a]"
---
MacroCall(
    Unbalanced {
        found: 93,
        expected: 41,
        opening: Position {
            line: 1,
            column: 3,
        },
    },
    1,
    5,
)
