crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__error_placeholder_in_binop.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: f(_ + 1)
---
Call(
    Arg(
        Placeholder(
            1,
            3,
        ),
        1,
        3,
    ),
    1,
    2,
)
