crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__error_tagged_template_with_space.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: "tag `x`"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: Var(
        "tag",
    ),
}
